add contributors information
add contributors information

--- a/gen_linear_regression.ipynb
+++ b/gen_linear_regression.ipynb
@@ -11,7 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "import os, re, sys, pickle, datetime\n",
+    "#code by Tobias gensch with contributions from Ellyn Peters, Jen Crawford, and Cian Kingston
+	"import os, re, sys, pickle, datetime\n",
     "import itertools\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
