--- a/gen_pca_clustering.ipynb
+++ b/gen_pca_clustering.ipynb
@@ -11,7 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "import os,re,sys,pickle,datetime,time,random,itertools\n",
+    "#code by Tobias gensch with contributions from Cian Kingston
+	"import os,re,sys,pickle,datetime,time,random,itertools\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
