--- a/gen_threshold_and_multidescriptor_plot.ipynb
+++ b/gen_threshold_and_multidescriptor_plot.ipynb
@@ -11,7 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "#code by Tobias gensch with contributions from Cian Kingston
+	"import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
