--- a/gen_umap.ipynb
+++ b/gen_umap.ipynb
@@ -11,6 +11,7 @@
    },
    "outputs": [],
    "source": [
+    "# code by Cian Kingston
     "import os,re,sys,pickle,datetime,time,random,itertools\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
