add author contributions

--- a/gen_threshold_and_multidescriptor_plot.ipynb
+++ b/gen_threshold_and_multidescriptor_plot.ipynb
@@ -11,8 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "#code by Tobias gensch with contributions from Cian Kingston
-	"import numpy as np\n",
+    "#code by Tobias Gensch with contributions from Cian Kingston\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -328,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
