--- a/gen_umap.ipynb
+++ b/gen_umap.ipynb
@@ -11,6 +11,7 @@
    },
    "outputs": [],
    "source": [
+    "#code by Cian Kingston\n",
     "import os,re,sys,pickle,datetime,time,random,itertools\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -368,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
