--- a/gen_pca_clustering.ipynb
+++ b/gen_pca_clustering.ipynb
@@ -11,8 +11,8 @@
    },
    "outputs": [],
    "source": [
-    "#code by Tobias gensch with contributions from Cian Kingston
-	"import os,re,sys,pickle,datetime,time,random,itertools\n",
+    "#code by Tobias Gensch with contributions from Cian Kingston\n",
+    "import os,re,sys,pickle,datetime,time,random,itertools\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import numpy as np\n",
@@ -545,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
